<?xml version="1.0"?>
<package format="3">
  <name>face_tracker</name>
  <version>0.0.1</version>
  <description>ROS2 Python face tracker node publishing /target/offset.</description>
  <maintainer email="sas573920@gmail.com">hyperdrant</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>face_tracker_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-opencv</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

