<?xml version="1.0"?>
<package format="3">
  <name>roarm_xyz_control</name>
  <version>0.0.1</version>
  <description>ROS2 keyboard xyz+t control for RoArm-M2-S using JSON serial commands</description>

  <maintainer email="your_email@example.com">htsun</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>python3-serial</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>